--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "heroicons": "^2.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-fontawesome": "^1.7.1",
     "react-router-dom": "^6.23.0",
     "react-toastify": "^10.0.5"
   },
