--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-fontawesome": "^1.7.1",
+    "react-icons": "^5.2.1",
     "react-router-dom": "^6.23.0",
     "react-toastify": "^10.0.5"
   },
