--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^18.2.0",
     "react-fontawesome": "^1.7.1",
     "react-icons": "^5.2.1",
+    "react-multistep": "^5.5.9",
     "react-router-dom": "^6.23.0",
     "react-toastify": "^10.0.5"
   },
