--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-icons": "^5.2.1",
     "react-multistep": "^5.5.9",
     "react-router-dom": "^6.23.0",
+    "react-sweetalert2": "^0.6.0",
     "react-toastify": "^10.0.5"
   },
   "devDependencies": {
