New all Changes when new componebt

--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-multistep": "^5.5.9",
     "react-router-dom": "^6.23.0",
     "react-sweetalert2": "^0.6.0",
-    "react-toastify": "^10.0.5"
+    "react-toastify": "^10.0.5",
+    "select": "^1.1.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
